--- a/app/app/client/templates/home/home.html
+++ b/app/app/client/templates/home/home.html
@@ -3,7 +3,7 @@
 		<div class="navbar-wrapper">
 			<div class="container">
 
-				<nav class="navbar navbar-inverse navbar-static-top">
+				<nav class="navbar navbar-static-top">
 					<div class="container">
 						<div class="navbar-header">
 							<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -12,32 +12,24 @@
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 							</button>
-							<a class="navbar-brand" href="#">Project name</a>
+							<a class="navbar-brand" href="#">Assgna</a>
 						</div>
 						<div id="navbar" class="navbar-collapse collapse">
 							<ul class="nav navbar-nav">
-								<li class="active"><a href="#">Home</a></li>
+								<li class="active"><a href="#">How does this work</a></li>
 								<li><a href="#about">About</a></li>
-								<li><a href="#contact">Contact</a></li>
-								<li class="dropdown">
-									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-									<ul class="dropdown-menu">
-										<li><a href="#">Action</a></li>
-										<li><a href="#">Another action</a></li>
-										<li><a href="#">Something else here</a></li>
-										<li role="separator" class="divider"></li>
-										<li class="dropdown-header">Nav header</li>
-										<li><a href="#">Separated link</a></li>
-										<li><a href="#">One more separated link</a></li>
-									</ul>
-								</li>
 							</ul>
-						</div>
-					</div>
-				</nav>
+                            <ul class="nav navbar-nav navbar-right">
+                                <li class="active"><a href="./">Sign Up <span class="sr-only">(current)</span></a></li>
+                                <li><a href="../navbar-static-top/">Login</a></li>
+                                <li><a href="../navbar-fixed-top/" class="assist">Be an Assistant</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
 
-			</div>
-		</div>
+            </div>
+        </div>
 
 
     <!-- Carousel
