--- a/app/app/client/templates/home/home.less
+++ b/app/app/client/templates/home/home.less
@@ -15,6 +15,7 @@
 		right: 0;
 		left: 0;
 		z-index: 20;
+		background-color: #FFFFFF;
 
 		.container {/* Flip around the padding for proper display in narrow viewports */
 			padding-right: 0;
@@ -24,7 +25,43 @@
 		.navbar {
 			padding-right: 15px;
 			padding-left: 15px;
+			margin: 0px;
 
+			.navbar-brand{
+				font-weight: 800;
+				padding: 22px 11px;
+				font-size: 30px;
+				color: #444;
+			}
+
+			.navbar-nav{
+				li{					
+					padding-top: 12px;
+					padding-bottom: 12px;
+
+					a{
+						color: #333;
+						padding: 10px 16px;
+						font-weight: 500;
+
+						&:hover{
+							color: #0079BF;
+							background-color: transparent;
+						}
+
+						&.assist{
+							border: solid 2px #888;
+							padding-left: 30px;
+							padding-right: 30px;
+							border-radius: 5px;
+
+							&:hover{								
+								color: #0079BF;
+							}
+						}
+					}
+				}
+			}
 			.container {
 				width: auto;
 			}
@@ -101,20 +138,20 @@
 	@media (min-width: 768px) {
 		/* Navbar positioning foo */
 		.navbar-wrapper {
-			margin-top: 20px;
-		}
-		.navbar-wrapper .container {
-			padding-right: 15px;
-			padding-left: 15px;
-		}
-		.navbar-wrapper .navbar {
-			padding-right: 0;
-			padding-left: 0;
-		}
+			.container {
+				padding-right: 15px;
+				padding-left: 15px;
+			}
 
-		/* The navbar becomes detached from the top, so we round the corners */
-		.navbar-wrapper .navbar {
-			border-radius: 4px;
+			.navbar {
+				padding-right: 0;
+				padding-left: 0;
+			}
+			
+			/* The navbar becomes detached from the top, so we round the corners */
+			.navbar {
+				border-radius: 4px;
+			}
 		}
 
 		/* Bump up size of carousel content */
