Added second font family

--- a/app/app/client/templates/home/home.less
+++ b/app/app/client/templates/home/home.less
@@ -1,6 +1,8 @@
 /*****************************************************************************/
 /* Home: Style */
 /*****************************************************************************/
+@import '../../stylesheets/_variables';
+
 #home {
 	padding-bottom: 40px;
 	color: #5a5a5a;
@@ -29,9 +31,11 @@
 
 			.navbar-brand{
 				font-weight: 800;
+				font-family: @font-family2;
 				padding: 22px 11px;
 				font-size: 30px;
 				color: #444;
+
 			}
 
 			.navbar-nav{
