--- a/app/app/client/stylesheets/_variables.less
+++ b/app/app/client/stylesheets/_variables.less
@@ -1,6 +1,7 @@
-@import url(http://fonts.googleapis.com/css?family=Raleway:400,100,200,300,600,500,700,900,800);
-
-@font-family: 'Raleway', sans-serif;
+@import url(http://fonts.googleapis.com/css?family=Raleway:400,100,200,300,600,500,700,900,800|Calligraffitti);
+// @import url(http://fonts.googleapis.com/css?family=Calligraffitti);
+@font-family1: 'Raleway', sans-serif;
+@font-family2: 'Calligraffitti', cursive;
 @primary-color: #4D9DE0;
 // colors white grey and blue
 
@@ -9,7 +10,7 @@ body, html{
 }
 
 body{
-	font-family: @font-family;
+	font-family: @font-family1;
 }
 
 h1, h2, h3, h4, h5, h6{
