added color variable

--- a/app/app/client/stylesheets/_variables.less
+++ b/app/app/client/stylesheets/_variables.less
@@ -4,6 +4,8 @@
 @font-family2: 'Calligraffitti', cursive;
 @primary-color: #4D9DE0;
 // colors white grey and blue
+@blue: #0079BF;
+@white: #FFFFFF;
 
 body, html{
 	height: 100%;
@@ -17,3 +19,4 @@ h1, h2, h3, h4, h5, h6{
 	font-weight: 100;
 	margin: 0px;
 }
+
