--- a/app/app/client/templates/home/home.less
+++ b/app/app/client/templates/home/home.less
@@ -49,7 +49,7 @@
 						font-weight: 500;
 
 						&:hover{
-							color: #0079BF;
+							color: @blue;
 							background-color: transparent;
 						}
 
@@ -60,7 +60,8 @@
 							border-radius: 5px;
 
 							&:hover{								
-								color: #0079BF;
+								color: @blue;
+								border-color: @blue;
 							}
 						}
 					}
