--- a/app/app/client/templates/home/home.html
+++ b/app/app/client/templates/home/home.html
@@ -2,35 +2,9 @@
 	<div id="home">
 		<div class="navbar-wrapper">
 			<div class="container">
-
-				<nav class="navbar navbar-static-top">
-					<div class="container">
-						<div class="navbar-header">
-							<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-								<span class="sr-only">Toggle navigation</span>
-								<span class="icon-bar"></span>
-								<span class="icon-bar"></span>
-								<span class="icon-bar"></span>
-							</button>
-							<a class="navbar-brand" href="#">Assgna</a>
-						</div>
-						<div id="navbar" class="navbar-collapse collapse">
-							<ul class="nav navbar-nav">
-								<li class="active"><a href="#">How does this work</a></li>
-								<li><a href="#about">About</a></li>
-							</ul>
-                            <ul class="nav navbar-nav navbar-right">
-                                <li class="active"><a href="./">Sign Up <span class="sr-only">(current)</span></a></li>
-                                <li><a href="../navbar-static-top/">Login</a></li>
-                                <li><a href="../navbar-fixed-top/" class="assist">Be an Assistant</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </nav>
-
+            {{> yield region="topNavigation"}}
             </div>
         </div>
-
 
     <!-- Carousel
     ================================================== -->
