--- a/app/app/client/templates/shared/navbars/navbars.html
+++ b/app/app/client/templates/shared/navbars/navbars.html
@@ -17,7 +17,7 @@
 						<li><a href="#about">About</a></li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
-						<li class="active"><a href="./">Sign Up <span class="sr-only">(current)</span></a></li>
+					<li class="active"><a href="{{pathFor 'signUp'}}">Sign Up <span class="sr-only">(current)</span></a></li>
 						<li><a href="../navbar-static-top/">Login</a></li>
 						<li><a href="../navbar-fixed-top/" class="assist">Be an Assistant</a></li>
 					</ul>
