--- a/app/app/client/templates/layouts/master_layout/master_layout.html
+++ b/app/app/client/templates/layouts/master_layout/master_layout.html
@@ -1,3 +1,6 @@
 <template name="MasterLayout">
-  {{> yield}}
+	<div id="masterLayout">
+		{{> yield region="topNavigation"}}
+		{{> yield}}
+	</div>
 </template>
