--- a/app/app/client/templates/shared/navbars/navbars.less
+++ b/app/app/client/templates/shared/navbars/navbars.less
@@ -91,3 +91,96 @@
 		}
 	}
 }
+
+
+#userNavigationTwo{
+
+	.navbar-wrapper {
+
+		/* Special class on .container surrounding .navbar, used for positioning it into place. */
+		position: absolute;
+		top: 0;
+		right: 0;
+		left: 0;
+		z-index: 20;
+		background-color: @white;
+		box-shadow: 0px 1px 1px #CCC;
+
+		.container {/* Flip around the padding for proper display in narrow viewports */
+			padding-right: 0;
+			padding-left: 0;
+		}
+
+		.navbar {
+			padding-right: 15px;
+			padding-left: 15px;
+			margin: 0px;
+
+			.navbar-brand{
+				font-weight: 800;
+				font-family: @font-family2;
+				padding: 22px 11px;
+				font-size: 30px;
+				color: #444;
+
+			}
+
+			.navbar-nav{
+				li{					
+					padding-top: 12px;
+					padding-bottom: 12px;
+					display: block;
+
+					&.signup{
+						text-align: right;
+
+						span{
+							font-size: 16px;
+							font-weight: 200;
+						}
+
+						a{
+							padding-right: 0px;
+							padding-bottom: 0px;
+							padding-top: 0px;
+						}
+					}
+					a{
+						color: #333;
+						padding: 10px 16px;
+						font-weight: 500;
+
+						&:hover{
+							color: @blue;
+							background-color: transparent;
+						}
+
+					}
+				}
+			}
+			.container {
+				width: auto;
+			}
+		}
+	}
+
+	@media (min-width: 768px) {
+		/* Navbar positioning foo */
+		.navbar-wrapper {
+			.container {
+				padding-right: 15px;
+				padding-left: 15px;
+			}
+
+			.navbar {
+				padding-right: 0;
+				padding-left: 0;
+			}
+
+			/* The navbar becomes detached from the top, so we round the corners */
+			.navbar {
+				border-radius: 4px;
+			}
+		}
+	}
+}
