--- a/app/app/client/stylesheets/main.less
+++ b/app/app/client/stylesheets/main.less
@@ -1,5 +1,16 @@
 /*****************************************************************************/
 /* main: Style */
 /*****************************************************************************/
-.main {
+@import '_variables';
+body, html{
+	height: 100%;
+}
+
+body{
+	font-family: @font-family1;
+}
+
+h1, h2, h3, h4, h5, h6{
+	font-weight: 100;
+	margin: 0px;
 }
