first phase of sign up page

--- a/app/app/client/templates/home/signup/sign-up.html
+++ b/app/app/client/templates/home/signup/sign-up.html
@@ -1,5 +1,34 @@
 <template name='signUp'>
 	<div id='signUp'>
 		<h1>Welcome to our sign up page</h1>
+		<div>
+			<h2>Tell us what you which to do.</h2>
+			<div class="options">
+				<div class="option">
+					<i class="icon-speechballoon8"></i>
+					<div class="desc">
+						<div class="main">
+							I want to get assitance with an assignment
+						</div>
+						<div class="sub">
+							Find someone knowledgeable with a problem set
+						</div>
+						<a href="" class="btn btn-primary button">Find Assistance</a>
+					</div>
+				</div>
+				<div class="option">
+					<i class="icon-hand-1"></i>
+					<div class='desc'>
+						<div class='main'>
+							I want to assist others with their tasks/assignments
+						</div>
+						<div class="sub">
+							Help someone with a knowledge based problem
+						</div>
+						<a href="" class="btn btn-primary button">Render Assistance</a>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 </template>
