--- a/app/app/client/templates/home/signup/sign-up.html
+++ b/app/app/client/templates/home/signup/sign-up.html
@@ -13,7 +13,7 @@
 						<div class="sub">
 							Find someone knowledgeable with a problem set
 						</div>
-						<a href="" class="btn btn-primary button">Find Assistance</a>
+						<a href="{{pathFor 'createUser'}}" class="btn btn-primary button">Find Assistance</a>
 					</div>
 				</div>
 				<div class="option">
@@ -25,7 +25,7 @@
 						<div class="sub">
 							Help someone with a knowledge based problem
 						</div>
-						<a href="" class="btn btn-primary button">Render Assistance</a>
+						<a href="{{pathFor 'createAssistant'}}" class="btn btn-primary button">Render Assistance</a>
 					</div>
 				</div>
 			</div>
