--- a/app/app/client/templates/home/signup/signup.less
+++ b/app/app/client/templates/home/signup/signup.less
@@ -1,7 +1,7 @@
 @import '../../../stylesheets/_variables';
 
 #signUp{
-	margin-top: 67px;
+	margin-top: @nav-adjust-margin;
 	padding: 5% 0px;
 	height: 100%;
 	text-align: center;
