--- a/app/app/client/templates/shared/not_found/not_found.html
+++ b/app/app/client/templates/shared/not_found/not_found.html
@@ -1,3 +1,10 @@
 <template name="NotFound">
-  <h1>Not Found</h1>
+	{{> userNavigationTwo}}
+	<div id="notFound">
+		<img src="http://p.w3layouts.com/demos/ohh/web/images/error-img.png">
+		<div class="desc">
+			<h1>Ooops the page you're looking for doesn't exist.</h1>
+			<h2>Lets start again from the <b><a href="/">home page</a></b></h2>
+		</div>
+	</div>
 </template>
