--- a/app/app/client/templates/home/signup/signup.less
+++ b/app/app/client/templates/home/signup/signup.less
@@ -64,3 +64,13 @@
 		}	
 	}
 }
+
+#userSignUp, #assistantSignUp{
+	margin-top: @nav-adjust-margin;
+	height: 100%;
+	padding-top: 3%;
+
+	.holder{
+		width: 80%;
+	}
+}
