Added signin form

--- a/app/app/client/templates/shared/navbars/navbars.html
+++ b/app/app/client/templates/shared/navbars/navbars.html
@@ -20,7 +20,7 @@
 							</ul>
 							<ul class="nav navbar-nav navbar-right">
 								<li class="active"><a href="{{pathFor 'signUp'}}">Sign Up <span class="sr-only">(current)</span></a></li>
-								<li><a href="../navbar-static-top/">Login</a></li>
+								<li><a href="{{pathFor 'loginUser'}}">Login</a></li>
 								<li><a href="../navbar-fixed-top/" class="assist">Be an Assistant</a></li>
 							</ul>
 						</div>
@@ -49,7 +49,7 @@
 							<ul class="nav navbar-nav navbar-right">
 								<li class="signup">
 									<span>Already have an account?</span>
-									<a href="../navbar-static-top/">Login</a>
+									<a href="{{pathFor 'loginUser'}}">Login</a>
 								</li>
 							</ul>
 						</div>
