--- a/app/app/client/templates/shared/navbars/navbars.html
+++ b/app/app/client/templates/shared/navbars/navbars.html
@@ -59,3 +59,44 @@
 		</div>
 	</div>
 </template>
+<template name='dashboardNavigation'>
+	<div id="homeNavigation">
+		<div class="navbar-wrapper">
+			<div class="container">
+				<nav class="navbar navbar-static-top">
+					<div class="container">
+						<div class="navbar-header">
+							<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+								<span class="sr-only">Toggle navigation</span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+							</button>
+							<a class="navbar-brand" href="#">Assgna</a>
+						</div>
+						<div id="navbar" class="navbar-collapse collapse">
+							<ul class="nav navbar-nav">
+								<li class="active"><a href="#">Issues</a></li>
+								<li><a href="#about">Assists</a></li>
+							</ul>
+							<ul class="nav navbar-nav navbar-right">
+								<li class="active"><a href="#">Help<span class="sr-only">(current)</span></a></li>
+								<li><a href="#">Notifications</a></li>
+								<!-- <li><a href="#">User</a></li> -->
+								<li class="dropdown">
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">User <span class="caret"></span></a>
+									<ul class="dropdown-menu">
+										<li><a href="{{pathFor 'dashboard'}}">Dashboard</a></li>
+										<li><a href="{{pathFor userSettings}}">Settings</a></li>
+										<li role="separator" class="divider"></li>
+										<li><a href="#">Logout</a></li>
+									</ul>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</nav>
+			</div>
+		</div>
+	</div>
+</template>
