Added route to user settings(user)

--- a/app/app/client/templates/shared/navbars/navbars.html
+++ b/app/app/client/templates/shared/navbars/navbars.html
@@ -87,7 +87,7 @@
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">User <span class="caret"></span></a>
 									<ul class="dropdown-menu">
 										<li><a href="{{pathFor 'dashboard'}}">Dashboard</a></li>
-										<li><a href="{{pathFor userSettings}}">Settings</a></li>
+										<li><a href="{{pathFor 'userSettings'}}">Settings</a></li>
 										<li role="separator" class="divider"></li>
 										<li><a href="#">Logout</a></li>
 									</ul>
