work on dashboard

--- a/app/app/client/stylesheets/main.less
+++ b/app/app/client/stylesheets/main.less
@@ -2,6 +2,7 @@
 /* main: Style */
 /*****************************************************************************/
 @import '_variables';
+
 body, html{
 	height: 100%;
 	background-color: #f9f9f9;
@@ -14,4 +15,20 @@ body{
 h1, h2, h3, h4, h5, h6{
 	font-weight: 100;
 	margin: 0px;
+}
+
+.border-radius{
+	border-radius: @border-radius;
+}
+
+.white{
+	background-color: #FFF;
+}
+
+.margin-TLBR{
+	margin: 5px;
+}
+
+.padding-TLBR{
+	padding: 12px;
 }
