--- a/app/app/client/templates/user/user_dashboard.less
+++ b/app/app/client/templates/user/user_dashboard.less
@@ -1,5 +1,6 @@
 @import '../../stylesheets/_variables';
 
 #userDashboard{
-	margin-top: @nav-adjust-margin;
+	margin-top: @nav-adjust-margin + 20px;
+	margin-bottom: @nav-adjust-margin + 20px;
 }
