Added requests collection

--- a/app/app/client/templates/user/user_dashboard.html
+++ b/app/app/client/templates/user/user_dashboard.html
@@ -55,8 +55,8 @@
 			</div>
 		</div>
 		<div>
-			<button class="custBtn">Make Request</button>
-			<button class="custBtn">Look for talents</button>
+			<!-- <button class="custBtn">Make Request</button>
+			<button class="custBtn">Look for talents</button> -->
 		</div>
 	</div>
 </template>
