--- a/app/app/client/templates/shared/navbars/navbars.html
+++ b/app/app/client/templates/shared/navbars/navbars.html
@@ -89,7 +89,7 @@
 										<li><a href="{{pathFor 'dashboard'}}">Dashboard</a></li>
 										<li><a href="{{pathFor 'userSettings'}}">Settings</a></li>
 										<li role="separator" class="divider"></li>
-										<li><a href="#">Logout</a></li>
+										<li><a href="{{pathFor 'signout'}}">Logout</a></li>
 									</ul>
 								</li>
 							</ul>
