added password field

--- a/app/app/client/templates/shared/settings/user_settings.html
+++ b/app/app/client/templates/shared/settings/user_settings.html
@@ -76,6 +76,14 @@
 				{{this.user.primaryEmail}}
 			</div>
 		</div>
+		<div class="input">
+			<div class="disp_label">
+				Password
+			</div> 
+			<div class="disp_value">
+				*****************
+			</div>
+		</div>
 	</div>
 	<!-- {{this.emails.0.address}} -->
 </template>
