--- a/app/app/client/stylesheets/main.less
+++ b/app/app/client/stylesheets/main.less
@@ -17,6 +17,19 @@ h1, h2, h3, h4, h5, h6{
 	margin: 0px;
 }
 
+input{
+
+}
+
+input[type='text'], input[type='email']{
+	padding: 8px 15px;
+	height: auto;
+	border: 1px solid #DDD;
+	box-shadow: none;
+	border-radius: 3px;
+	background-color: rgba(255,255,255,0.8);
+}
+
 .border-radius{
 	border-radius: @border-radius;
 }
