--- a/app/app/client/templates/shared/settings/user_settings.less
+++ b/app/app/client/templates/shared/settings/user_settings.less
@@ -3,6 +3,7 @@
 #userSettings{
 	margin-top: @nav-adjust-margin + 20px;
 	margin-bottom: 20px;
+	min-height: 100%;
 }
 
 .userViewDetails{
@@ -20,6 +21,31 @@
 
 		.disp_value{
 			display: inline-block;
+		}
+	}
+}
+
+#settingsSideBar{
+	ul{
+		padding: 0px;
+		list-style-type: none;
+
+		li{
+			display: block;
+			a{
+				display: block;
+				font-size: 14px;
+				padding: 10px 18px;
+				background-color: #FFF;
+				margin-bottom: 2px;
+				color: #000;
+				font-weight: normal;
+
+				&:hover{
+					text-decoration: none;
+					color: #23527c;
+				}
+			}
 		}
 	}
 }
