--- a/app/app/client/templates/shared/settings/user_settings.html
+++ b/app/app/client/templates/shared/settings/user_settings.html
@@ -5,12 +5,14 @@
 				<div class="col-md-10 col-md-offset-1">
 					<div class="row">
 						<div class="col-md-3">
-							<div>
+							<div style="box-shadow: 0px 0px 2px #AAA;background-color: inherit;">
 								{{> settingsSideBar}}
 							</div>
 						</div>
 						<div class="col-md-9">
-							{{> yield region="settings_side"}}
+							<div style="box-shadow: 0px 0px 2px #AAA; padding: 12px 16px; background-color: #FFF;">
+								{{> yield region="settings_side"}}
+							</div>
 						</div>
 					</div>
 				</div>
@@ -18,6 +20,7 @@
 		</div>
 	</div>
 </template>
+<!-- Account Settings -->
 <template name='accountSettings'>
 	<fieldset>
 		<legend>
@@ -46,6 +49,9 @@
 			{{> afQuickField name="profile.firstName"}}
 			{{> afQuickField name="profile.lastName"}}
 			{{> afQuickField name="emails.0.address"}}
+			<div>
+				<input type="submit" value="Save data"/>
+			</div>
 			{{/unless}}
 		</div>
 		{{/autoForm}}
@@ -58,7 +64,20 @@
 		Customer profile edit page
 		{{/if}}
 		{{#if currentUser.isProvider}}
-		Assistant User profile settings
+		<h3>Assistant User profile settings</h3>
+		<div>
+			
+			{{#autoForm id="afUpdateDemo" type=update collection="Meteor.users" doc=this.user}}
+			<div>
+				{{> afQuickField name="profile.assistantDoc.overview" }}
+				{{> afQuickField name="profile.assistantDoc.educationalBackground" }}
+				{{> afQuickField name="profile.assistantDoc.otherCertifications" }}
+				<hr>
+				{{> afQuickField name="profile.assistantDoc.workExperience" }}
+				
+			</div>
+			{{/autoForm}}
+		</div>
 		{{/if}}
 	</div>
 </template>
