--- a/app/app/client/templates/shared/settings/user_settings.less
+++ b/app/app/client/templates/shared/settings/user_settings.less
@@ -44,6 +44,12 @@
 				&:hover{
 					text-decoration: none;
 					color: #23527c;
+					outline: 1px solid #cecece;
+					background-color: #fcfcfc;
+				}
+
+				&:focus{
+					text-decoration: none;
 				}
 			}
 		}
