--- a/app/app/client/templates/assistant/dashboard/assistant_dashboard.html
+++ b/app/app/client/templates/assistant/dashboard/assistant_dashboard.html
@@ -5,7 +5,24 @@
 				<div class="col-lg-11 col-lg-offset-1">
 					<div class="row">
 						<div class="col-md-9">
-							Welcome to the assistant page
+							Welcome to the assistant page.				
+							{{#if this.jobs}}
+							<div>
+								{{#each this.jobs}}
+								<div class="panel panel-default">
+									<div class="panel-body">
+										<div>
+											{{title}}<br/>
+											{{description}}<br/>
+											{{deliveryTime}}<br/>
+										</div>
+									</div>
+								</div>
+								{{/each}}
+							</div>
+							{{else}}
+							<div>No Jobs yet available</div>
+							{{/if}}
 						</div>
 						<div class="col-md-3">
 							<div class="border-radius white padding-TLBR">
